# sandbox

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  push.sh  push_tag.sh  test.sh
.claude/skills/ai-sandbox-release/: SKILL.md
.github/ISSUE_TEMPLATE/: feature-sandbox-fix.md  security-audit-report.md
.github/workflows/: ci.yml
docs/: README.md
examples/: demo.rs  destructive_test.rs  functional_test.rs
src/: lib.rs
src/execpolicy/: mod.rs
src/linux_sandbox/: bsd.rs  bwrap.rs  landlock.rs  mod.rs
src/process_hardening/: mod.rs
src/sandboxing/: mod.rs  seatbelt.rs
src/windows_sandbox/: acl.rs  mod.rs  process.rs  token.rs
